[metadata]
name = rvesimulator
version = file: VERSION
author = Jiaxiang(Yaga) Yi
author_email = J.Yi@tudelft.nl
description = rve simulation via abaqus.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = "python", "rve simulation", "abaqus", "multiscale simulation"
url = https://github.com/bessagroup/rvesimulator.git
license = MIT LICENSE
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
	
[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy
    pandas
    matplotlib
    scipy
	
[options.packages.find]
where=src


[tool:pytest]
minversion = 6.0
testpaths =
    tests
markers =
    smoke

[flake8]
ignore = W503, E501, F403, F841, F401
exclude =
	.tox,
    __pycache__,
    dist,
    data,
	*.egg,
	docs,
	notebooks,
	tests
	.git
	rvesimulator/src/scriptbase
select = E,W,F
max-line-length = 119
extend-ignore = E203